# simple_typing_application

./: .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sample_config.json  sample_config_huggingface.json  sample_config_static.json  sample_config_with_sshkeyboard.json  sample_record.json  setup.cfg
.github/workflows/: add-tag-on-pull-request-by-bot.yaml  check-and-fix-version-on-push-tags.yaml  code-style-check-workflow-call.yaml  on-push-branches.yaml  on-push.yaml  on_push_tags.yaml  pytest-workflow-call.yaml  pytest.yaml  static-type-check-workflow-call.yaml  tests-on-schedule.yaml  validate-version-workflow-call.yaml
sdk/: __init__.py  const.py  enum.py  main.py  util.py
sdk/create/: __init__.py  ask.py  execute.py  main.py  template.py
sdk/integrate/: __init__.py  ask.py  execute.py  main.py
simple_typing_application/: __init__.py  config.py  main.py  typing_game.py
simple_typing_application/const/: __init__.py  color.py  hiragana_katakana_map.py  hiragana_romaji_map.py  key_monitor.py  keys.py  sentence_generator.py  user_interface.py
simple_typing_application/key_monitor/: __init__.py  base.py  factory.py  pynput.py  sshkeyboard.py
simple_typing_application/models/: __init__.py  config_model.py  output_model.py  record_model.py  typing_target_model.py
simple_typing_application/models/config_models/: __init__.py  general_config_model.py  key_monitor_config_model.py  sentence_generator_config_model.py  user_interface_config_model.py
simple_typing_application/sentence_generator/: __init__.py  base.py  factory.py  huggingface_sentence_generator.py  openai_sentence_generator.py  static_sentence_generator.py  utils.py
simple_typing_application/ui/: __init__.py  base.py  cui.py  factory.py
simple_typing_application/utils/: __init__.py  japanese_string_utils.py  rerun.py  stopwatch.py
tests/: test_config.py  test_typing_game.py
tests/key_monitor/: test_factory.py  test_pynput.py  test_sshkeyboard.py
tests/sentence_generator/: test_factory.py  test_huggingface_sentence_generator.py  test_openai_sentence_generator.py  test_static_sentence_generator.py  test_utils.py
tests/ui/: test_cui.py  test_factory.py
tests/utils/: test_japanese_string_utils.py  test_rerun.py  test_stopwatch.py
tests_sdk/: test_main.py  test_util.py
tests_sdk/create/: test_ask.py  test_execute.py  test_main.py
tests_sdk/integrate/: test_ask.py  test_execute.py  test_main.py
