[metadata]
name = simple_typing_application
# version = 0.0
author = hmasdev
author_email = hmasuidev1com@gmail.com
description = Simple Typing Application: To Measure Your Typing Performance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hmasdev/simple_typing_application
license_files = LICENSE
keywords =
    typing
    keyboard
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    click
    langchain
    openai
    pydantic
    pynput
    requests
    sshkeyboard
    types-pynput
    types-requests

[options.extras_require]
extra =
    jupyter
    jupyterlab
    matplotlib
    pandas
    seaborn

huggingface =
    torch
    accelerate
    protobuf
    transformers
    sentencepiece

dev =
    autopep8
    flake8
    mypy
    pytest
    pytest-cov
    pytest-mock

[options.packages.find]
exclude =
    tests*
    venv*
    .venv*
